# bezier

./: CMakeLists.txt  LICENSE  README.md
examples/: circles.cpp  example.cpp  interpolation.cpp  wave.cpp
examples/samples/: circles.ps  example.ps  interpolation.ps  wave.ps
include/bezier/: bezier.h  bezier_curve.h  bezier_curve.hpp  composite_bezier_curve.h  curve.h  fit_composite_bezier_curve.h  utilities.h
include/bezier/math/: misc.h  tridiagonal.h
include/bezier/postscript/: bezier_postscript.h  postscript.h
src/: bezier_curve.cpp  composite_bezier_curve.cpp  curve.cpp  fit_composite_bezier_curve.cpp  utilities.cpp
src/math/: misc.cpp  tridiagonal.cpp
src/postscript/: bezier_postscript.cpp  postscript.cpp
test/: bezier_curve_test.cpp  composite_bezier_curve_test.cpp  curve_test.cpp  fit_composite_bezier_curve_test.cpp  math_test.cpp  postscript_test.cpp  utilities_test.cpp
